<resources>
    <string name="app_name">CGPA CALCULATOR</string>
    <string name="cgpa_text">CGPA</string>
    <string name="sgpa_text">SGPA</string>
    <string name="button_text">NEXT</string>
    <string name="button_text1">RESULT</string>
    <string name="group_id">GroupId</string>
    <string name="sem1">1st</string>
    <string name="sem2">2nd</string>
    <string name="sem3">3rd</string>
    <string name="sem4">4th</string>
    <string name="sem5">5th</string>
    <string name="sem6">6th</string>
    <string name="sem7">7th</string>
    <string name="sem8">8th</string>
    <string name="sem9">9th</string>
    <string name="sem10">10th</string>
    <string name="sem11">11th</string>
    <string name="sem12">12th</string>
    <string name="btn2">NEXT</string>
    <string name="semi1">Semister1 SGPA:</string>
    <string name="semi2">Semister2 SGPA:</string>
    <string name="semi3">Semister3 SGPA:</string>
    <string name="semi4">Semister4 SGPA:</string>
    <string name="semi5">Semister5 SGPA:</string>
    <string name="semi6">Semister6 SGPA:</string>
    <string name="semi7">Semister7 SGPA:</string>
    <string name="semi8">Semister8 SGPA:</string>
    <string name="semi9">Semister9 SGPA:</string>
    <string name="semi10">Semister10 SGPA:</string>
    <string name="semi11">Semister11 SGPA:</string>
    <string name="semi12">Semister12 SGPA:</string>
    <string name="sem1crdt">Semister1 CREDIT</string>
    <string name="sem2crdt">Semister2 CREDIT</string>
    <string name="sem3crdt">Semister3 CREDIT</string>
    <string name="sem4crdt">Semister4 CREDIT</string>
    <string name="sem5crdt">Semister5 CREDIT</string>
    <string name="sem6crdt">Semister6 CREDIT</string>
    <string name="sem7crdt">Semister7 CREDIT</string>
    <string name="sem8crdt">Semister8 CREDIT</string>
    <string name="sem9crdt">Semister9 CREDIT</string>
    <string name="sem10crdt">Semister10 CREDIT</string>
    <string name="sem11crdt">Semister11 CREDIT</string>
    <string name="sem12crdt">Semister12 CREDIT</string>
</resources>